--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,8 @@ Flask-Script==2.0.5
 Flask-Cache==0.13.1
 Flask-WTF==0.14.2
 
-Flask-RESTful==0.3.5
+flask-restful
+
 Flask-Celery-Helper==1.1.0
 
 Flask-Assets==0.12
